Fix CORS, Dockerfile, Java entities, and environment setup